# adips

./: .autotools  .cproject  .project  ADIPS算法说明及测试.docx  NEWS  README  configure  configure.ac  configure.ac~  configure.scan  configure~  ~$IPS算法说明及测试.docx
autom4te.cache/: output.0  output.1  output.2  output.4  requests  traces.0  traces.1  traces.2  traces.4  traces.5t
release/: adips.xml
release/src/.deps/: BackStatSpace.Po
src/: AAssociateMotion.cpp  AAssociateMotion.h  AAstrometry.cpp  AAstrometry.h  ACalibrateFlux.cpp  ACalibrateFlux.h  ADIProcess.cpp  ADIProcess.h  ADIReduce.cpp  ADIReduce.h  ADIWorkFlow.cpp  ADIWorkFlow.h  AFindPV.cpp  AFindPV.h  AMatchCatalog.cpp  AMatchCatalog.h  APhotometry.cpp  APhotometry.h  BackStatSpace.cpp  BackStatSpace.h  FITSHandlerImage.hpp  FilterMean.hpp  GLog.cpp  GLog.h  ImageFrame.hpp  Makefile.am  Makefile.in  Parameter.hpp  adips.cpp
